--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,8 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
+    "@wazo/euc-plugins-sdk": "^0.0.23",
+    "@wazo/sdk": "0.43.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
