--- a/ui/package.json
+++ b/ui/package.json
@@ -15,10 +15,12 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
+    "@reduxjs/toolkit": "^2.3.0",
     "@wazo/euc-plugins-sdk": "^0.0.23",
     "@wazo/sdk": "0.43.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
