--- a/wazo/rules
+++ b/wazo/rules
@@ -9,6 +9,7 @@ case "$1" in
 
     package)
         tar xvf dist/emergency-check-*.tar.gz -C ${pkgdir}
+        cp -R etc ${pkgdir}/
         ;;
 
     install)
